# convertible_couch

./: .gitignore  .gitmodules  .releaserc  AudioEndPointLibrary.lib  Cargo.toml  LICENSE  README.md
.cargo/: mutants.toml
.github/: dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: build.md  ci.md
.github/workflows/: auto-merge-dependabot-pr.yml  ci.yml  code-coverage.yml  dependabot-auto-merge.yml  prepare-release.yml  pull-request-dependabot-merged.yml  pull-request-dependabot.yml  pull-request-main-develop.yml  pull-request.yml  pull_request.yml  push-main-develop.yml  push-main.yml  push-release-hotfix.yml  push-release.yml  push.yml  release.yml  rust.yml
common/: Cargo.toml
common/src/: lib.rs  win32.rs
common_tests/: Cargo.toml
common_tests/src/: assertions.rs  fuzzing.rs  utils.rs
common_tests/src/fuzzing/: computer.rs  config_mod_info_id.rs  device_id.rs  displays.rs  gsm_id.rs  guid.rs  monitor_name.rs  monitors.rs  position.rs  resolution.rs  win32.rs
lib/: Cargo.toml  build.rs
lib/benches/: change_primary_display.rs  swap_primary_displays.rs  swap_primary_monitors.rs
lib/src/: application_error.rs  application_result.rs  display_settings.rs  lib.rs  log.rs  sound_output_device.rs
lib/src/display_settings/: mod.rs  win32.rs  windows.rs
lib/src/display_settings/windows/: mod.rs  windows_display_settings.rs
lib/src/display_settings/windows/win_32/: windows_api_based_win_32.rs
lib/src/displays_settings/: mod.rs
lib/src/displays_settings/windows/: mod.rs  win_32_based_windows_api.rs  windows_api.rs  windows_display_settings.rs  windows_displays_settings.rs
lib/src/displays_settings/windows/win_32/: mod.rs  windows_api_based_win_32.rs
lib/src/sound_settings/: mod.rs  windows.rs
lib/src/sound_settings/windows/: audio_endpoint_library.rs  mod.rs  windows_sound_settings.rs
lib/src/sound_settings/windows/audio_endpoint_library/: dll_based_audio_endpoint_library.rs
lib/src/speakers_settings/: mod.rs
lib/src/speakers_settings/windows/: mod.rs  windows_api.rs  windows_sound_settings.rs  windows_speakers_settings.rs  windows_speakers_settings_2.rs
lib/src/speakers_settings/windows/audio_endpoint_library/: dll_based_audio_endpoint_library.rs  mod.rs
lib/src/speakers_settings/windows/win_32_based_windows_api/: immdevice.rs  immdevice_collection.rs  immdevice_enumerator.rs  ipolicy_config_vista.rs  iproperty_store.rs  mod.rs
lib/src/speakers_settings/windows/windows_com/: mod.rs  windows_api_based_windows_com.rs
lib/src/speakers_settings/windows/windows_com/windows_api_based_windows_com/: immdevice.rs  immdevice_collection.rs  immdevice_enumerator.rs  ipolicy_config_vista.rs  iproperty_store.rs  mod.rs
lib/src/testing/: assertions.rs  mod.rs  utils.rs
lib/src/testing/fuzzing/: audio_endpoint.rs  audio_endpoint_library.rs  audio_endpoint_name.rs  computer.rs  device_id.rs  display_name.rs  displays.rs  fuzzer_new.rs  guid.rs  mod.rs  win32.rs
lib/src/testing/fuzzing/display_settings/: device_id.rs  display_name.rs  displays.rs  gsm_id.rs  mod.rs  resolution.rs  video_output.rs  win_32.rs
lib/src/testing/fuzzing/displays/: device_id.rs  display_name.rs  mod.rs  position.rs  settings_api.rs  video_output.rs  win_32.rs
lib/src/testing/fuzzing/displays/settings_api/: mod.rs  windows.rs
lib/src/testing/fuzzing/displays/settings_api/behaviour/: mod.rs  windows.rs
lib/src/testing/fuzzing/displays_settings/: device_id.rs  displays.rs  mod.rs  win_32.rs
lib/src/testing/fuzzing/sound_settings/: audio_endpoint.rs  audio_endpoint_id.rs  audio_endpoint_library.rs  audio_endpoint_name.rs  audio_output_device.rs  audio_output_device_id.rs  audio_output_device_name.rs  mod.rs
lib/src/testing/fuzzing/speakers/: mod.rs  speaker_id.rs  speaker_name.rs
lib/src/testing/fuzzing/speakers/settings_api/: mod.rs  windows.rs
lib/src/testing/fuzzing/speakers/settings_api/behaviour/: mod.rs  windows.rs
lib/src/testing/fuzzing/speakers_settings/: audio_endpoint_library.rs  mod.rs  speakers.rs
lib/tests/: integration_tests.rs
src/: display.rs  display_settings.rs  lib.rs  log.rs  main.rs
testing/: Cargo.toml
testing/src/: assertions.rs  lib.rs
testing/src/arrangements/: builders.rs  mod.rs
testing/src/arrangements/builders/: application.rs  arguments.rs  command_result.rs  mod.rs
testing/src/arrangements/builders/arguments/: change.rs  displays.rs  info.rs  mod.rs  speakers.rs
testing/src/arrangements/builders/command_result/: change.rs  displays.rs  info.rs  mod.rs
testing/src/arrangements/fuzzing/: computer.rs  guid.rs  mod.rs  win_32_error.rs
testing/src/arrangements/fuzzing/displays/: config_mod_info_id.rs  device_id.rs  display_name.rs  mod.rs  position.rs  resolution.rs  video_output.rs
testing/src/arrangements/fuzzing/displays/settings_api/: mod.rs  windows.rs
testing/src/arrangements/fuzzing/displays/settings_api/behaviour/: mod.rs  windows.rs
testing/src/arrangements/fuzzing/speakers/: mod.rs  speaker_id.rs
testing/src/arrangements/fuzzing/speakers/settings_api/: mod.rs  windows.rs
testing/src/arrangements/fuzzing/speakers/settings_api/behaviour/: mod.rs  windows.rs
tests/: integration_tests.rs
tests_common/: Cargo.toml
(+53 files in other folders)
