[package]
name = "convertible_couch"
version = "0.5.0"
edition = "2021"
authors = ["Thomas PEREZ"]
description = "Automate Windows display configuration to play from your couch"
readme = "README.md"
repository = "https://github.com/drsanguin/convertible_couch"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
windows = "0.52.0"
features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
test-case = "3.3.1"
