[package]
name = "convertible_couch_common"
version = "0.5.0"
edition = "2021"
authors = ["Thomas PEREZ"]
description = "Automate Windows display configuration to play from your couch"
readme = "../README.md"
repository = "https://github.com/drsanguin/convertible_couch"
license-file = "../LICENSE"

[dependencies.windows]
windows = "0.52.0"
features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging"
]
