[package]
name = "convertible_couch_common_tests"
version = "0.5.0"
edition = "2021"
authors = ["Thomas PEREZ"]
description = "Automate Windows display configuration to play from your couch"
readme = "README.md"
repository = "https://github.com/drsanguin/convertible_couch"
license-file = "../LICENSE"

[dependencies]
rand = "0.8.5"
convertible_couch_common = { path = "../common"}

[dependencies.windows]
windows = "0.52.0"
version = "*"