[package]
name = "convertible_couch_lib"
version = "2.0.0"
edition = "2021"
authors = ["Thomas PEREZ"]
description = "Automate Windows display configuration to play from your couch"
readme = "../README.md"
repository = "https://github.com/drsanguin/convertible_couch"
license-file = "../LICENSE"

[dependencies]
log = "0.4.28"
log4rs = "1.4.0"
rand = "0.9.2"
thiserror = "2.0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
test-case = "3.3.1"
