[package]
name = "convertible_couch_lib"
version = "2.0.1"
edition = "2021"
authors = ["Thomas PEREZ"]
description = "A Rust library for programmatically switching the system's primary display and default speaker, enabling seamless transitions between desktop and TV setups."
readme = "../README.md"
repository = "https://github.com/drsanguin/convertible_couch"
license-file = "../LICENSE"

[dependencies]
log = "0.4.29"
log4rs = "1.4.0"
rand = "0.10.0"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Devices_Display", "Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.62.2"

[dev-dependencies]
test-case = "3.3.1"
